[fix]Input background in dark mode fixed

--- a/lucid-book-store/src/App.css
+++ b/lucid-book-store/src/App.css
@@ -25,4 +25,8 @@ footer {
 }
 .dark-theme {
   --background-white: #171717;
+  --input-grey: #2c3032;
+}
+input {
+  background-color: var(--input-grey);
 }
